@@ -262,6 +262,43 @@ class DecoderBaseAdminGtk(BaseAdminGtk):
 
         return BaseAdminGtk.setup(self)
 
+    def component_volumeChanged(self, channel, rms, peak, decay):
+        volume = self.nodes['Volume']
+        volume.volumeChanged(channel, rms, peak, decay)
+
+    def component_effectVolumeSet(self, effect, volume):
+        """
+        @param volume: volume multiplier between 0.0 and 4.0
+        @type  volume: float
+        """
+        if effect != 'inputVolume':
+            self.warning('Unknown effect %s in %r' % (effect, self))
+            return
+        v = self.nodes['Volume']
+        v.volumeSet(volume)
+
+    def component_effectModeSet(self, effect, mode):
+        """
+        @param mode: deinterlace mode
+        @type  volume: string
+        """
+        if effect != 'deinterlace':
+            self.warning('Unknown effect %s in %r' % (effect, self))
+            return
+        v = self.nodes['Deinterlace']
+        v.modeSet(mode)
+
+    def component_effectMethodSet(self, effect, mode):
+        """
+        @param mode: deinterlace method
+        @type  volume: string
+        """
+        if effect != 'deinterlace':
+            self.warning('Unknown effect %s in %r' % (effect, self))
+            return
+        v = self.nodes['Deinterlace']
+        v.methodSet(mode)
+
 
 class DVBAdminGtk(DecoderBaseAdminGtk):
 
